Changed images to cards for readablility. Fixed many issues. Added gallery page

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,3 +1,10 @@
+
+.card{
+    margin: auto;
+}
+
+
+
 .footer {
     position: fixed;
     left: 0;
