--- a/css/gti.css
+++ b/css/gti.css
@@ -18,10 +18,12 @@
 
 }
 
-#left img{
+#left{
     float: left;
+
 }
 
-#right img{
+#right{
     float: right;
+
 }
